# MarketMind-CrewAI

./: .gitignore  LICENSE  pyproject.toml  readme.md
src/market_update/: crew.py  main.py
src/market_update/config/: agents.yaml  tasks.yaml
src/market_update/other_tools/: slack_messenger.py
src/market_update/tools/: search_tool.py
